@@ -11,6 +11,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/brands")
@@ -48,7 +49,7 @@ public class BrandController {
         List<BrandDTO> listBrand = brandService.getBrands()
                 .stream()
                 .map(BrandMapper.INSTANCE::toDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(listBrand);
     }
 }
