@@ -4,6 +4,6 @@ import org.springframework.http.HttpStatus;
 
 public class ResourceNotFoundException extends ApiServiceException {
     public ResourceNotFoundException(String resourceName, Integer resourceId) {
-        super(HttpStatus.NOT_FOUND, "%s can't found with id=%d".formatted(resourceName, resourceId));
+        super(HttpStatus.NOT_FOUND, String.format("%s can't found with id=%d", resourceName, resourceId));
     }
 }
